--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,31 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Privacy & Cookies - Silksong Checklist</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;margin:2rem;max-width:840px;line-height:1.5;background:#0d0f12;color:#f5f7fa}h1{font-size:1.4rem;margin-top:0}a{color:#4fb3ff}code{background:#1c232b;padding:2px 4px;border-radius:4px;font-size:.85em}</style></head><body><h1>Privacy & Cookies</h1><p>This site (<strong>checklistsilksong.com</strong>) uses Google Tag Manager and Google AdSense to collect anonymous usage information and display advertising.</p><h2>What is collected</h2><ul><li>Anonymous event metrics (item toggles, language/theme changes, progress %) sent to Google Tag Manager / Analytics.</li><li>Standard AdSense advertising identifiers and anonymized usage data for ad delivery and reporting.</li></ul><h2>What is NOT collected</h2><ul><li>No personal names, emails, or account data.</li><li>No precise geolocation.</li><li>No user-generated content beyond checklist state stored locally in your browser.</li></ul><h2>Local Storage</h2><p>Your completion progress is stored only in your browser via <code>localStorage</code>. Clearing browser data or clicking Reset will erase it.</p><h2>Cookies</h2><p>Google services (AdSense / Tag Manager / Analytics) may set cookies or use similar technologies for measurement and personalization as per their own policies.</p><h2>Opt-Out</h2><p>You can block analytics/ads using standard browser extensions or built‑in tracking protection. The app will still function.</p><h2>Contact</h2><p>If you have concerns about privacy on this site, open an issue in the public repository or disable scripts via your browser’s controls.</p><p style="margin-top:2rem;font-size:.75rem;opacity:.7">Last updated: <span id="lastUpdated"></span></p><script>document.getElementById('lastUpdated').textContent=new Date().toISOString().split('T')[0];</script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Privacy & Cookies – Silksong Checklist</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="robots" content="noindex,follow" />
+  <style>
+    body{font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;margin:0;padding:2rem;line-height:1.5;background:#0d0f12;color:#f5f7fa;}
+    a{color:#4fb3ff;} h1{font-size:1.15rem;margin-top:0;} code{background:#1c232b;padding:.1rem .35rem;border-radius:4px;font-size:.8rem;}
+    main{max-width:820px;margin:0 auto;} footer{margin-top:3rem;font-size:.65rem;opacity:.65;}
+  </style>
+</head>
+<body>
+  <main>
+    <h1>Privacy & Cookies</h1>
+    <p>This simple static site stores checklist progress only in your browser using <code>localStorage</code>. No personal data is sent to our server (there is no backend).</p>
+    <h2 style="font-size:.95rem;margin-top:1.6rem">Analytics</h2>
+    <p>We use Google Analytics 4 (basic configuration) to understand aggregated usage (page views, language selection patterns). IP anonymization is handled by Google infrastructure. No custom user identifiers are set.</p>
+    <h2 style="font-size:.95rem;margin-top:1.6rem">Advertising</h2>
+    <p>Google AdSense is integrated to display contextual ads. Ads help cover hosting/domain costs. Google may use cookies or local storage for ad personalization if applicable to your region. If your browser blocks ads or tracking scripts, the site continues to function fully.</p>
+    <p>You can manage advertising-related cookies globally via your browser settings or industry opt-out pages (for example <a href="https://adssettings.google.com/" rel="noopener" target="_blank">Google Ad Settings</a>).</p>
+    <h2 style="font-size:.95rem;margin-top:1.6rem">Local Data Removal</h2>
+    <p>Use the Reset button on the main page or clear your browser storage to remove all locally stored checklist progress.</p>
+    <h2 style="font-size:.95rem;margin-top:1.6rem">Contact</h2>
+    <p>If you have privacy concerns or wish to request removal of accidental data, open a GitHub issue in the project repository.</p>
+    <footer>&copy; <span id="y"></span> Silksong Checklist (fan project). Not affiliated with Team Cherry.</footer>
+  </main>
+  <script>document.getElementById('y').textContent=new Date().getFullYear();</script>
+</body>
+</html><!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Privacy & Cookies - Silksong Checklist</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;margin:2rem;max-width:840px;line-height:1.5;background:#0d0f12;color:#f5f7fa}h1{font-size:1.4rem;margin-top:0}a{color:#4fb3ff}code{background:#1c232b;padding:2px 4px;border-radius:4px;font-size:.85em}</style></head><body><h1>Privacy & Cookies</h1><p>This site (<strong>checklistsilksong.com</strong>) uses Google Tag Manager and Google AdSense to collect anonymous usage information and display advertising.</p><h2>What is collected</h2><ul><li>Anonymous event metrics (item toggles, language/theme changes, progress %) sent to Google Tag Manager / Analytics.</li><li>Standard AdSense advertising identifiers and anonymized usage data for ad delivery and reporting.</li></ul><h2>What is NOT collected</h2><ul><li>No personal names, emails, or account data.</li><li>No precise geolocation.</li><li>No user-generated content beyond checklist state stored locally in your browser.</li></ul><h2>Local Storage</h2><p>Your completion progress is stored only in your browser via <code>localStorage</code>. Clearing browser data or clicking Reset will erase it.</p><h2>Cookies</h2><p>Google services (AdSense / Tag Manager / Analytics) may set cookies or use similar technologies for measurement and personalization as per their own policies.</p><h2>Opt-Out</h2><p>You can block analytics/ads using standard browser extensions or built‑in tracking protection. The app will still function.</p><h2>Contact</h2><p>If you have concerns about privacy on this site, open an issue in the public repository or disable scripts via your browser’s controls.</p><p style="margin-top:2rem;font-size:.75rem;opacity:.7">Last updated: <span id="lastUpdated"></span></p><script>document.getElementById('lastUpdated').textContent=new Date().toISOString().split('T')[0];</script></body></html>
