--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#0d0f12" media="(prefers-color-scheme: dark)">
   <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
   <meta name="application-name" content="Silksong 100% Checklist" />
+  <meta name="author" content="Silksong Checklist Community" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Silksong Checklist" />
@@ -315,9 +316,36 @@
     <p data-i18n="intro.p1" style="margin:.4rem 0 .65rem;">Use this free interactive checklist to plan and verify your 100% (and future 112% if applicable) progression in <strong>Hollow Knight: Silksong</strong>. Mark needle upgrades, silk spools, crests, abilities, tools and more. Your progress is stored locally (no login) so you can return any time.</p>
     <p data-i18n="intro.p2" style="margin:.4rem 0 .65rem;">A Spanish interface is available – switch languages with the selector above. Data will evolve as official information is released.</p>
     <noscript><p data-i18n="intro.noscript"><strong>Note:</strong> This checklist needs JavaScript enabled to function. You can still view a simplified list of item categories below.</p></noscript>
+    <h3 style="margin:1.2rem 0 .55rem;font-size:.85rem;letter-spacing:.5px;font-weight:600;">How to Use This Checklist</h3>
+    <p style="margin:.45rem 0 .65rem;">Browse categories, click an item to mark it as obtained, and your progress bar will update automatically. Data is stored only in your browser via <code>localStorage</code>, so clearing site data resets progress. You can switch language (EN/ES) at any time—progress is shared.</p>
+    <p style="margin:.45rem 0 .65rem;">As official Silksong information becomes available, placeholder or inferred entries will be replaced with verified data. We aim to keep structure stable so you can plan routing and completion goals early.</p>
+    <p style="margin:.45rem 0 .65rem;">If you spot inaccuracies or want to contribute, open an issue or pull request in the project repository. Community corrections help keep the list reliable.</p>
+    <h3 style="margin:1.4rem 0 .55rem;font-size:.85rem;letter-spacing:.5px;font-weight:600;">Features</h3>
+    <ul style="margin:.3rem 0 .85rem .9rem; padding:0; font-size:.75rem; line-height:1.4;">
+      <li>Lightweight, no tracking beyond essential analytics.</li>
+      <li>Offline-capable basics (cached core assets in your browser).</li>
+      <li>Clear progress metrics: percent complete + remaining items.</li>
+      <li>Internationalization (English / Spanish initial support).</li>
+      <li>Expandable categories for faster navigation.</li>
+    </ul>
+    <h3 style="margin:1.4rem 0 .55rem;font-size:.85rem;letter-spacing:.5px;font-weight:600;">FAQ</h3>
+    <dl style="margin:.2rem 0 1.2rem; font-size:.72rem; line-height:1.45;">
+      <dt style="font-weight:600;margin:.6rem 0 .25rem;">Does this store my data online?</dt>
+      <dd style="margin:0 0 .3rem;">No. Progress is saved only in your browser. You can export manually later (feature planned).</dd>
+      <dt style="font-weight:600;margin:.6rem 0 .25rem;">Will values change when the game releases?</dt>
+      <dd style="margin:0 0 .3rem;">Placeholder or inferred entries will be updated; IDs and structural keys aim to remain stable.</dd>
+      <dt style="font-weight:600;margin:.6rem 0 .25rem;">Why don't I see ads yet?</dt>
+      <dd style="margin:0 0 .3rem;">The site is under initial AdSense review. Ads will appear automatically once approved.</dd>
+      <dt style="font-weight:600;margin:.6rem 0 .25rem;">Can I suggest new categories?</dt>
+      <dd style="margin:0 0 .3rem;">Yes—submit ideas through the repository issue tracker.</dd>
+      <dt style="font-weight:600;margin:.6rem 0 .25rem;">Is this official?</dt>
+      <dd style="margin:0 0 .3rem;">No. This is an independent fan project for organization and planning.</dd>
+    </dl>
+    <h3 style="margin:1.4rem 0 .55rem;font-size:.85rem;letter-spacing:.5px;font-weight:600;">Disclaimer</h3>
+    <p style="margin:.4rem 0 .65rem;">Hollow Knight and Silksong are trademarks of Team Cherry. This site is a non-commercial fan resource and is not affiliated with or endorsed by Team Cherry.</p>
   </section>
-  <!-- Ad Unit: Top Responsive (with framed wrapper) -->
-  <div class="ad-container ad-container--top">
+  <!-- (Moved ad below expanded textual content for better content/ad ratio during review) -->
+  <div class="ad-container ad-container--top" style="margin-top:1.8rem;">
     <small class="ad-label">Advertisement</small>
     <div class="ad-slot-wrap">
       <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9707168065012640" data-ad-slot="8232693985" data-ad-format="auto" data-full-width-responsive="true"></ins>
@@ -335,7 +363,8 @@
       <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
   </div>
-  <span data-i18n="footer.note">Placeholder dataset based on Hollow Knight – will be replaced with Silksong data.</span>
+  <span data-i18n="footer.note">Provisional dataset inspired by Hollow Knight pending official Silksong release data; will be replaced with verified information.</span>
+  <br><a href="/about.html" style="color:var(--accent);font-size:0.65rem;">About / Disclaimer</a>
   <br><a href="/privacy.html" style="color:var(--accent);font-size:0.65rem;">Privacy & Cookies</a>
 </footer>
 <script type="module" src="./src/js/main.js"></script>
